--- a/css/style.less
+++ b/css/style.less
@@ -328,7 +328,7 @@ header{
     }
 }
 .slider{
-   background: url(/css/blockbg.jpg) no-repeat, @mainGrey;
+   background: url(/blockbg.jpg) no-repeat, @mainGrey;
    background-size: cover; 
    weight:100%;
    font-size: 16px;
