--- a/css/style.less
+++ b/css/style.less
@@ -328,14 +328,13 @@ header{
     }
 }
 .slider{
-   background: url(/css/blockbg.jpg) no-repeat, @mainGrey;
+   background: url(../css/blockbg.jpg) no-repeat, @mainGrey;
    background-size: cover; 
    weight:100%;
    font-size: 16px;
    padding: 214px 0 0 0;
    color: @white;
    overflow: hidden; 
-   transition: background 1s;
    @media @s{
        text-align: center;
    }
